NetBSD Problem Report #44734

From sborrill@precedence.co.uk  Thu Mar 17 11:06:51 2011
Return-Path: <sborrill@precedence.co.uk>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 2B7DA63B995
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 17 Mar 2011 11:06:51 +0000 (UTC)
Message-Id: <201103171106.p2HB6lSI028324@precedence.co.uk>
Date: Thu, 17 Mar 2011 11:06:47 GMT
From: netbsd@precedence.co.uk
Reply-To: netbsd@precedence.co.uk
To: gnats-bugs@gnats.NetBSD.org
Subject: Starting atalkd triggers assertion panic with i386 xen domU
X-Send-Pr-Version: 3.95

>Number:         44734
>Category:       kern
>Synopsis:       Starting atalkd triggers assertion panic with i386 xen domU "off < percpu_nextoff"
>Confidential:   no
>Severity:       critical
>Priority:       medium
>Responsible:    bouyer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 17 11:10:00 +0000 2011
>Closed-Date:    Thu Jun 30 11:06:07 +0000 2011
>Last-Modified:  Thu Jun 30 11:06:07 +0000 2011
>Originator:     Stephen Borrill
>Release:        NetBSD 5.1_STABLE
>Organization:

>Environment:


System: NetBSD newbuild 5.1_STABLE NetBSD 5.1_STABLE (NETMANXEN3) #1: NetBSD 5.1_STABLE (NETMANXEN3) #7: Thu Feb 17 10:17:29 GMT 2011
        root@builder.internal.precedence.co.uk:/usr/work/netmanager/work/obj/5.0/sys/arch/i386/compile/NETMANXEN3 i386
Architecture: i386
Machine: i386
>Description:
Starting atalkd.
panic: kernel diagnostic assertion "off < percpu_nextoff" failed: file "/usr/src/5.0/sys/kern/subr_percpu.c", line 78
fatal breakpoint trap in supervisor mode
trap type 1 code 0 eip c03a93ec cs 9 eflags 246 cr2 bb781210 ilevel 6
Stopped in pid 0.5 (system) at  netbsd:breakpoint+0x4:  popl    %ebp
db> bt
breakpoint(c045d0c7,cc579bf8,c0472b40,3,c1055a00,c1055d00,0,0,0,0) at netbsd:breakpoint+0x4
panic(c0466f24,c042c511,c04511e9,c045121c,4e,ccff9000,cc579c2c,c0309a36,c042c511,c045121c) at netbsd:panic+0x1a6
__kernassert(c042c511,c045121c,4e,c04511e9,0,ccff9000,cc579c3c,c0309a5a,0,c0469800) at netbsd:__kernassert+0x39
percpu_offset(0,c0469800,cc579c4c,c0309a95,0,c0472b40,cc579c7c,c0334923,0,1) at netbsd:percpu_offset+0x46
percpu_getptr_remote(0,c0472b40,cc579c7c,c0334923,0,1,2,c03bf3c7,c1190600,c04ac580) at netbsd:percpu_getptr_remote+0x1a
percpu_getref(0,1,2,c03bf3c7,c1190600,c04ac580,0,c1190600,c1055c00,0) at netbsd:percpu_getref+0x25
m_claim(c1055c00,c0469800,c0110c90,ccffd004,c04ac582,1,cc579cbc,c02e1387,c04ac582,cc579cfc) at netbsd:m_claim+0x53
aarpprobe(ccffd004,ca3117c0,cc579cfc,c03bf47a,c0472b88,c04ac5e0,c04acde8,c04ad5e8,c04adde8,c0110c90) at netbsd:aarpprobe+0xb1
callout_softclock(0,cc579d28,c02dd6ac,ca307500,0,cc579da0,0,cc51e074,c02f0750,ca307500) at netbsd:callout_softclock+0x1a2
softint_thread(cc51e074,0,c010006b,c0100063,c010006b,0,0,0,0,0) at netbsd:softint_thread+0x93

Doesn't seem to affect 'real' i386, just i386 PV domU

Kernel configuration is:
include         "arch/i386/conf/XEN3PAE_DOMU"

options         MBUFTRACE
options         GATEWAY
options         MROUTING
options         APPLETALK
options         NMBCLUSTERS=16384

no options      COMPAT_NOMID
no options      COMPAT_09
no options      COMPAT_10
no options      COMPAT_11
no options      COMPAT_12
no options      COMPAT_13
no options      COMPAT_14
no options      COMPAT_15
no options      COMPAT_43

options         ALTQ
options         ALTQ_CBQ
options         ALTQ_RED

pseudo-device   carp
no pseudo-device        sl
no pseudo-device        stf
options         BRIDGE_IPF

options         IPSTATE_SIZE=30011
options         IPSTATE_MAX=21011

>How-To-Repeat:
Install pkgsrc/net/netatalk on an i386 Xen domU
/etc/rc.d/atalkd onestart
>Fix:


>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-xen-maintainer->bouyer
Responsible-Changed-By: bouyer@NetBSD.org
Responsible-Changed-When: Wed, 04 May 2011 09:40:10 +0000
Responsible-Changed-Why:
I'm working on a fix


From: Manuel Bouyer <bouyer@antioche.eu.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/44734 (Starting atalkd triggers assertion panic with i386
 xen domU "off < percpu_nextoff")
Date: Wed, 4 May 2011 11:48:28 +0200

 On Wed, May 04, 2011 at 09:40:11AM +0000, bouyer@NetBSD.org wrote:
 > I'm working on a fix

 For the record:
 http://mail-index.netbsd.org/tech-kern/2011/05/04/msg010458.html

 -- 
 Manuel Bouyer <bouyer@antioche.eu.org>
      NetBSD: 26 ans d'experience feront toujours la difference
 --

State-Changed-From-To: open->pending-pullups
State-Changed-By: bouyer@NetBSD.org
State-Changed-When: Sun, 08 May 2011 13:54:43 +0000
State-Changed-Why:
pullup-5 #1622


From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44734 CVS commit: src/sys/netatalk
Date: Sun, 8 May 2011 13:51:31 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sun May  8 13:51:31 UTC 2011

 Modified Files:
 	src/sys/netatalk: aarp.c aarp.h ddp_usrreq.c

 Log Message:
 aarpprobe() is called before MOWNER_ATTACH(&aarp_mowner), leading
 to a DIAGNOSTIC panic when MBUFTRACE is defined and atalkd is started.
 Fix by moving MOWNER_ATTACH(&aarp_mowner) to ddp_init().
 Should fix PR kern/44734


 To generate a diff of this commit:
 cvs rdiff -u -r1.34 -r1.35 src/sys/netatalk/aarp.c
 cvs rdiff -u -r1.2 -r1.3 src/sys/netatalk/aarp.h
 cvs rdiff -u -r1.39 -r1.40 src/sys/netatalk/ddp_usrreq.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Stephen Borrill" <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44734 CVS commit: [netbsd-5] src/sys/netatalk
Date: Thu, 30 Jun 2011 09:31:15 +0000

 Module Name:	src
 Committed By:	sborrill
 Date:		Thu Jun 30 09:31:15 UTC 2011

 Modified Files:
 	src/sys/netatalk [netbsd-5]: aarp.c aarp.h ddp_usrreq.c

 Log Message:
 Pull up the following revisions(s) (requested by bouyer in ticket #1622):
 	sys/netatalk/aarp.c:		revision 1.35
 	sys/netatalk/aarp.h:		revision 1.3
 	sys/netatalk/ddp_usrreq.c:	revision 1.40

 aarpprobe() is called before MOWNER_ATTACH(&aarp_mowner), leading
 to a DIAGNOSTIC panic when MBUFTRACE is defined and atalkd is started.
 Fix by moving MOWNER_ATTACH(&aarp_mowner) to ddp_init().
 Fixes PR kern/44734


 To generate a diff of this commit:
 cvs rdiff -u -r1.27 -r1.27.12.1 src/sys/netatalk/aarp.c
 cvs rdiff -u -r1.2 -r1.2.86.1 src/sys/netatalk/aarp.h
 cvs rdiff -u -r1.33 -r1.33.10.1 src/sys/netatalk/ddp_usrreq.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: sborrill@NetBSD.org
State-Changed-When: Thu, 30 Jun 2011 11:06:07 +0000
State-Changed-Why:
Pulled up to netbsd-5


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.