aarpprobe() is called before MOWNER_ATTACH(&aarp_mowner), leading to a DIAGNOSTIC panic when MBUFTRACE is defined and atalkd is started. Fix by moving MOWNER_ATTACH(&aarp_mowner) to ddp_init(). Should fix PR kern/44734